Connecting web to api
