# server/src/auth/schemas/responses.ts
@@ -47,6 +47,7 @@ export const SessionResponseSchema = z
         description: 'User account creation timestamp',
         example: '2025-10-05T12:08:28.374Z',
       }),
+      locale: z.string().length(2).meta({ description: 'Users preferred locale', example: 'en' }),
     }),
   })
   .describe('Session response')
