# web/src/openapi.yaml
@@ -448,11 +448,18 @@ components:
               pattern: "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z|([+-](?:[01]\\d|2[0-3]):[0-5]\\d)))$"
               description: User account creation timestamp
               example: 2025-10-05T12:08:28.374Z
+            locale:
+              type: string
+              minLength: 2
+              maxLength: 2
+              description: Users preferred locale
+              example: en
           required:
             - name
             - email
             - email_verified
             - created_at
+            - locale
       required:
         - session
         - user
